# TakeoutReader

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEMO_TakeoutReader_Output.html  LICENSE.txt  README.md  TakeoutReader.spec  TakeoutReader_Installer.iss  pyproject.toml  takeoutreader_build.ps1  takeoutreader_core.py  takeoutreader_gui.py
takeoutreader/: __init__.py  __main__.py
takeoutreader/core/: __init__.py  constants.py  detection.py  extractor.py  parser.py  renderer.py  sanitizer.py  validator.py
takeoutreader/gui/: __init__.py  app.py
takeoutreader/utils/: __init__.py
tests/: conftest.py  test_extractor.py  test_parser.py  test_sanitizer.py
tests/fixtures/: edge_cases.mbox  sample.mbox
